--- a/task1.html
+++ b/task1.html
@@ -8,40 +8,40 @@
 
 <body>
     <form>
-        <label>Повне ім'я (П.І.Б.):</label>
-        <input type="text" />
+        <label for="full-name">Повне ім'я (П.І.Б.):</label>
+        <input type="text" id="full-name" />
         <br/><br/>
 
-        <label>Стать:</label>
-        <input type="text" />
+        <label for="sex">Стать:</label>
+        <input type="text" id="sex" />
         <br/><br/>
 
-        <label>Дата народження:</label>
-        <input type="text" />
+        <label for="birth-date">Дата народження:</label>
+        <input type="text" id="birth-date" />
         <br/><br/>
 
-        <label>email:</label>
-        <input type="text" />
+        <label for="email">email:</label>
+        <input type="text" id="email" />
         <br/><br/>
 
-        <label>Телефон:</label>
-        <input type="text" />
+        <label for="phone-number">Телефон:</label>
+        <input type="text" id="phone-number" />
         <br/><br/>
 
-        <label>Бажаний колір фону:</label>
-        <input type="text" />
+        <label for="preferred-background-colour">Бажаний колір фону:</label>
+        <input type="text" id="preferred-background-colour" />
         <br/><br/>
 
-        <label>Країна:</label>
-        <input type="text" />
+        <label for="country">Країна:</label>
+        <input type="text" id="country" />
         <br/><br/>
         
-        <label>Місто:</label>
-        <input type="text" />
+        <label for="city">Місто:</label>
+        <input type="text" id="city" />
         <br/><br/>
         
-        <label>Коментар:</label>
-        <input type="text" />
+        <label for="comment">Коментар:</label>
+        <input type="text" id="comment" />
         <br/><br/>
 
         <button type="submit">Додати викладача</button>
