--- a/task1.html
+++ b/task1.html
@@ -8,6 +8,9 @@
 
 <body>
     <form>
+    <fieldset>
+        <legend><h3>Форма додавання викладача</h3></legend>
+
         <label for="full-name">Повне ім'я (П.І.Б.):</label>
         <input type="text" id="full-name" />
         <br/><br/>
@@ -45,6 +48,7 @@
         <br/><br/>
 
         <button type="submit">Додати викладача</button>
+    </fieldset>
     </form>
 </body>
 </html>
