Improve task 1 solution

--- a/task1.html
+++ b/task1.html
@@ -47,7 +47,7 @@
         <input type="text" id="comment" />
         <br/><br/>
 
-        <button type="submit">Додати викладача</button>
+        <button type="submit"><strong>Додати викладача</strong></button>
     </fieldset>
     </form>
 </body>
