Improve task 2 solution

--- a/task2.html
+++ b/task2.html
@@ -9,7 +9,7 @@
 <body>
     <form>
     <fieldset>
-        <legend><h3>Картка викладача</h3></legend>
+        <legend><h3>Компактна картка викладача</h3></legend>
 
         <img src="images/teacher.png"
             width="100vw"
