Improve task 2 solution

--- a/task2.html
+++ b/task2.html
@@ -12,8 +12,8 @@
         <legend><h3>Компактна картка викладача</h3></legend>
 
         <img src="images/teacher.png"
-            width="100vw"
-            height="100vh" 
+            width="135"
+            height="135" 
             alt="Зображення Петренка Петра Петровича - викладача української мови" />
 
         <p>Петренко Петро Петрович</p>
