Improve task 2 solution

--- a/task2.html
+++ b/task2.html
@@ -11,12 +11,13 @@
     <fieldset>
         <legend><h3>Компактна картка викладача</h3></legend>
 
-        <img src="images/teacher.png"
+        <figure>
+            <img src="images/teacher.png"
             width="135"
             height="135" 
             alt="Зображення Петренка Петра Петровича - викладача української мови" />
-
-        <p>Петренко Петро Петрович</p>
+            <figcaption>Петренко Петро Петрович</figcaption>
+        </figure>
 
         <details>
             <summary>Докладніше</summary>
