Improve task 1 solution

--- a/task1.html
+++ b/task1.html
@@ -20,7 +20,7 @@
         <br/><br/>
 
         <label for="birth-date">Дата народження:</label>
-        <input type="text" id="birth-date" />
+        <input type="date" id="birth-date" />
         <br/><br/>
 
         <label for="email">email:</label>
