--- a/task1.html
+++ b/task1.html
@@ -11,41 +11,43 @@
     <fieldset>
         <legend><h3>Форма додавання викладача</h3></legend>
 
-        <label for="full-name">Повне ім'я (П.І.Б.):</label>
-        <input type="text" id="full-name" />
-        <br/><br/>
+        <section>
+            <label for="full-name">Повне ім'я (П.І.Б.):</label>
+            <input type="text" id="full-name" />
+            <br/><br/>
 
-        <label for="sex">Стать:</label>
-        <input type="text" id="sex" />
-        <br/><br/>
+            <label for="sex">Стать:</label>
+            <input type="text" id="sex" />
+            <br/><br/>
 
-        <label for="birth-date">Дата народження:</label>
-        <input type="date" id="birth-date" />
-        <br/><br/>
+            <label for="birth-date">Дата народження:</label>
+            <input type="date" id="birth-date" />
+            <br/><br/>
 
-        <label for="email">email:</label>
-        <input type="text" id="email" />
-        <br/><br/>
+            <label for="email">email:</label>
+            <input type="text" id="email" />
+            <br/><br/>
 
-        <label for="phone-number">Телефон:</label>
-        <input type="text" id="phone-number" />
-        <br/><br/>
+            <label for="phone-number">Телефон:</label>
+            <input type="text" id="phone-number" />
+            <br/><br/>
 
-        <label for="preferred-background-colour">Бажаний колір фону:</label>
-        <input type="text" id="preferred-background-colour" />
-        <br/><br/>
+            <label for="preferred-background-colour">Бажаний колір фону:</label>
+            <input type="text" id="preferred-background-colour" />
+            <br/><br/>
 
-        <label for="country">Країна:</label>
-        <input type="text" id="country" />
-        <br/><br/>
+            <label for="country">Країна:</label>
+            <input type="text" id="country" />
+            <br/><br/>
         
-        <label for="city">Місто:</label>
-        <input type="text" id="city" />
-        <br/><br/>
+            <label for="city">Місто:</label>
+            <input type="text" id="city" />
+            <br/><br/>
         
-        <label for="comment">Коментар:</label>
-        <input type="text" id="comment" />
-        <br/><br/>
+            <label for="comment">Коментар:</label>
+            <input type="text" id="comment" />
+            <br/><br/>
+        </section>
 
         <button type="submit"><b>Додати викладача</b></button>
     </fieldset>
