Improve task 2 solution

--- a/task2.html
+++ b/task2.html
@@ -12,9 +12,7 @@
         <legend><h3>Компактна картка викладача</h3></legend>
 
         <figure>
-            <img src="images/teacher.png"
-            width="135"
-            height="135" 
+            <img src="images/teacher.png" width="135" height="135" 
             alt="Зображення Петренка Петра Петровича - викладача української мови" />
             <figcaption>Петренко Петро Петрович</figcaption>
         </figure>
