--- a/task3.html
+++ b/task3.html
@@ -12,6 +12,8 @@
         <legend><h3>Повна картка викладача</h3></legend>
     
         <section>
+            <img src="images/teacher.png" width="135" height="135" 
+                alt="Зображення Петренка Петра Петровича - викладача української мови" />
             <p>П.І.Б.: Петренко Петро Петрович</p>
             <p>Стать: Чоловіча</p>
             <p>Вік: 42 роки</p>
