--- a/task3.html
+++ b/task3.html
@@ -22,10 +22,10 @@
             <p>Країна: Україна</p>
             <p>Місто: Київ</p>
             <p>Коментар: викладач української мови</p>
-            <p>
+            <section>
                 Місце роботи:<br/>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.7456674276536!2d30.516819276153207!3d50.46446058635545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce3f8783f067%3A0x20e77fb079389395!2sNational%20University%20of%20Kyiv-Mohyla%20Academy!5e0!3m2!1sen!2suk!4v1684336169549!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </p>
+            </section>
         </section>
     </fieldset>
     </form>
