Improve task 1 solution

--- a/task1.html
+++ b/task1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form>
+    <form autocomplete="off">
     <fieldset>
         <legend><h3>Форма додавання викладача</h3></legend>
 
