Improve task 1 solution

--- a/task1.html
+++ b/task1.html
@@ -12,41 +12,59 @@
         <legend><h3>Форма додавання викладача</h3></legend>
 
         <section>
-            <label for="full-name">Повне ім'я (П.І.Б.):</label>
-            <input type="text" id="full-name" />
-            <br/><br/>
+            <section>
+                <label for="full-name">Повне ім'я (П.І.Б.):</label>
+                <input type="text" id="full-name" />
+            </section>
+            <br/>
 
-            <label for="sex">Стать:</label>
-            <input type="text" id="sex" />
-            <br/><br/>
+            <section>
+                <label for="sex">Стать:</label>
+                <input type="text" id="sex" />
+            </section>
+            <br/>
 
-            <label for="birth-date">Дата народження:</label>
-            <input type="date" id="birth-date" />
-            <br/><br/>
+            <section>
+                <label for="birth-date">Дата народження:</label>
+                <input type="date" id="birth-date" />
+            </section>
+            <br/>
 
-            <label for="email">email:</label>
-            <input type="text" id="email" />
-            <br/><br/>
+            <section>
+                <label for="email">email:</label>
+                <input type="text" id="email" />
+            </section>
+            <br/>
 
-            <label for="phone-number">Телефон:</label>
-            <input type="text" id="phone-number" />
-            <br/><br/>
+            <section>
+                <label for="phone-number">Телефон:</label>
+                <input type="text" id="phone-number" />
+            </section>
+            <br/>
 
-            <label for="preferred-background-colour">Бажаний колір фону:</label>
-            <input type="text" id="preferred-background-colour" />
-            <br/><br/>
+            <section>
+                <label for="preferred-background-colour">Бажаний колір фону:</label>
+                <input type="text" id="preferred-background-colour" />
+            </section>
+            <br/>
 
-            <label for="country">Країна:</label>
-            <input type="text" id="country" />
-            <br/><br/>
+            <section>
+                <label for="country">Країна:</label>
+                <input type="text" id="country" />
+            </section>
+            <br/>
         
-            <label for="city">Місто:</label>
-            <input type="text" id="city" />
-            <br/><br/>
+            <section>
+                <label for="city">Місто:</label>
+                <input type="text" id="city" />
+            </section>
+            <br/>
         
-            <label for="comment">Коментар:</label>
-            <input type="text" id="comment" />
-            <br/><br/>
+            <section>
+                <label for="comment">Коментар:</label>
+                <input type="text" id="comment" />
+            </section>
+            <br/>
         </section>
 
         <button type="submit"><b>Додати викладача</b></button>
